--- a/public/loadpage/styleMain.css
+++ b/public/loadpage/styleMain.css
@@ -191,8 +191,8 @@ body {
 
 .round-details {
     font-family: "Roboto Condensed", sans-serif;
-    font-size: 13px;
-    color: #2c7399;
+    font-size: 2em;
+    color: #fcfcfc;
     text-transform: uppercase;
     text-align: center;
     height: 40px;
@@ -344,7 +344,7 @@ body {
     }
 
     .split {
-        border-bottom: 1px solid #b6b6b6;
+        border-bottom: 1px solid rgb(56, 56, 56);
         padding-bottom: 20px;
     }
 
