--- a/public/loadpage/styleMain.css
+++ b/public/loadpage/styleMain.css
@@ -63,7 +63,7 @@ body {
 #bracket {
     overflow: hidden;
     background-color: #e1e1e1;
-    background-color: rgba(225, 225, 225, 0.9);
+    background-color: rgb(56, 56, 56);
     padding-top: 20px;
     font-size: 12px;
     padding: 40px 0;
