--- a/public/loadpage/styleMain.css
+++ b/public/loadpage/styleMain.css
@@ -414,7 +414,7 @@ body {
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    width: fit-content;
+    width: 15em;
     display: inline-block;
     font-family: "Abel", sans-serif;
     text-transform: uppercase;
@@ -429,7 +429,7 @@ body {
     max-width: 90%;
     text-decoration: none;
     user-select: none;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .leader-board-team {
